// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DeprecatedTableCell Component > should match a snapshot with full props 1`] = `
<DocumentFragment>
  <div
    class="foo-bar el-table-cell-has-dark-text el-table-narrow-cell-is-full-width el-table-cell-narrow-order1 el-deprecated-table-cell"
  >
    <span
      class="el-intent-default el-icon"
      style="font-size: 1.25rem;"
    >
      <svg
        fill="none"
        height="24"
        role="img"
        style="font-size: 1.25rem;"
        title="Icon image with name add"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 11H13V4C13 3.44772 12.5523 3 12 3C11.4477 3 11 3.44772 11 4V11H4C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13H11V20C11 20.5523 11.4477 21 12 21C12.5523 21 13 20.5523 13 20V13H20C20.5523 13 21 12.5523 21 12C21 11.4477 20.5523 11 20 11Z"
          fill="currentColor"
        />
      </svg>
    </span>
    <div
      class="mocked-styled-10 el-deprecated-table-cell-content"
      data-narrow-label="Label"
    />
  </div>
</DocumentFragment>
`;

exports[`DeprecatedTableCell Component > should match a snapshot with no props 1`] = `
<DocumentFragment>
  <div
    class="el-table-cell-has-dark-text el-deprecated-table-cell"
  >
    <div
      class="mocked-styled-10 el-deprecated-table-cell-content"
    />
  </div>
</DocumentFragment>
`;

exports[`DeprecatedTableHeader Component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-1 el-deprecated-table-header"
  />
</DocumentFragment>
`;

exports[`DeprecatedTableHeadersRow Component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-0 el-deprecated-table-headers-row"
  />
</DocumentFragment>
`;

exports[`DeprecatedTableRow Component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-2 el-deprecated-table-row"
  />
</DocumentFragment>
`;

exports[`DeprecatedTableRowContainer Component > should match a snapshot when not open 1`] = `
<DocumentFragment>
  <div
    class="el-is-active el-deprecated-table-row-container"
  />
</DocumentFragment>
`;

exports[`DeprecatedTableRowContainer Component > should match a snapshot when open 1`] = `
<DocumentFragment>
  <div
    class="el-is-active el-deprecated-table-row-container"
  />
</DocumentFragment>
`;

exports[`TableCellSplit Component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-5 el-table-cell-split-wrap"
  >
    <div
      class="mocked-styled-6 el-table-cell-split-data"
    >
      Some Data
    </div>
    <div
      class="mocked-styled-7 el-table-cell-split-sub-data"
    >
      Some Longer Sub Data
    </div>
  </div>
</DocumentFragment>
`;

exports[`TableCtaTriggerCell Component > should match a snapshot with children and no icon 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-3 el-table-cta-cell"
    role="button"
    tabindex="0"
  >
    <div>
      I am a child
    </div>
  </div>
</DocumentFragment>
`;

exports[`TableCtaTriggerCell Component > should match a snapshot with no children and an icon 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-3 el-table-cta-cell"
    role="button"
    tabindex="0"
  >
    <div
      class="mocked-styled-11 el-table-cta-icon-container"
    >
      <span
        class="el-intent-default el-icon"
      >
        <svg
          fill="none"
          height="24"
          role="img"
          title="Icon image with name add"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 11H13V4C13 3.44772 12.5523 3 12 3C11.4477 3 11 3.44772 11 4V11H4C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13H11V20C11 20.5523 11.4477 21 12 21C12.5523 21 13 20.5523 13 20V13H20C20.5523 13 21 12.5523 21 12C21 11.4477 20.5523 11 20 11Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TableCtaTriggerCell Component > should match a snapshot with no children and no icon 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-3 el-table-cta-cell"
    role="button"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`TableExpandableRow Component > should match a snapshot when not open 1`] = `
<DocumentFragment>
  <div
    class="el-is-active el-table-expandable-row"
  >
    <div
      class="mocked-styled-13 el-table-expandable-container"
    />
  </div>
</DocumentFragment>
`;

exports[`TableExpandableRow Component > should match a snapshot when open 1`] = `
<DocumentFragment>
  <div
    class="el-is-active el-table-expandable-row"
  >
    <div
      class="mocked-styled-13 el-table-expandable-container"
    />
  </div>
</DocumentFragment>
`;

exports[`TableExpandableRowTriggerCell Component > should match a snapshot with children 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-8 el-table-expandable-row-trigger-cell"
    role="button"
    tabindex="0"
  >
    <div>
      I am a child
    </div>
  </div>
</DocumentFragment>
`;

exports[`TableExpandableRowTriggerCell Component > should match a snapshot with no children and closed 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-8 el-table-expandable-row-trigger-cell"
    role="button"
    tabindex="0"
  >
    <span
      class="el-intent-default el-icon"
    >
      <svg
        fill="none"
        height="24"
        role="img"
        title="Icon image with name more"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10C6.10457 10 7 10.8954 7 12Z"
          fill="currentColor"
        />
        <path
          d="M12 14C13.1046 14 14 13.1046 14 12C14 10.8954 13.1046 10 12 10C10.8954 10 10 10.8954 10 12C10 13.1046 10.8954 14 12 14Z"
          fill="currentColor"
        />
        <path
          d="M19 14C20.1046 14 21 13.1046 21 12C21 10.8954 20.1046 10 19 10C17.8954 10 17 10.8954 17 12C17 13.1046 17.8954 14 19 14Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`TableExpandableRowTriggerCell Component > should match a snapshot with no children and open 1`] = `
<DocumentFragment>
  <div
    class="el-table-narrow-cell-is-full-width el-table-expandable-row-trigger-cell"
    role="button"
    tabindex="0"
  >
    <span
      class="el-intent-primary el-icon"
    >
      <svg
        fill="none"
        height="24"
        role="img"
        title="Icon image with name more"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10C6.10457 10 7 10.8954 7 12Z"
          fill="currentColor"
        />
        <path
          d="M12 14C13.1046 14 14 13.1046 14 12C14 10.8954 13.1046 10 12 10C10.8954 10 10 10.8954 10 12C10 13.1046 10.8954 14 12 14Z"
          fill="currentColor"
        />
        <path
          d="M19 14C20.1046 14 21 13.1046 21 12C21 10.8954 20.1046 10 19 10C17.8954 10 17 10.8954 17 12C17 13.1046 17.8954 14 19 14Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;
